--- a/Site_biologia/index.html
+++ b/Site_biologia/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logoimg.png" type="image/x-icon">
 </head>
@@ -17,10 +18,10 @@
     <nav class="menu-opcoes">
             <ul class="menuul">
                     <li><a class="menulink" href="#introducao">Consequências</a></li>
+                    <li><a class="menulink" href="#curi">Vídeos Educativos</a></li>
                     <li><a class="menulink" href="#contraceptivos">Contraceptivos</a></li>
                     <li><a class="menulink" href="#relacionamentos">Relacionamentos</a></li>
                     <li><a class="menulink" href="#autocuidado">AutoCuidado</a></li>
-                    <li><a class="menulink" href="contato.html">Contato</a></li>
             </ul>
     </nav>
 </header>
@@ -73,7 +74,7 @@
 
     <section id="contraceptivos">
             <h1>Métodos Contraceptivos</h1>
-            <img width="300em" height="300em" class="creatinaimg" src="img/contraceptivos.jpg" alt="">       
+            <img width="300em" height="280em" class="contraimg" src="img/contraceptivos.jpg" alt="">       
                     <p>A contracepção desempenha um papel fundamental na prevenção da gravidez indesejada e na promoção da saúde sexual e reprodutiva. Dois dos métodos contraceptivos mais conhecidos e amplamente utilizados em todo o mundo são a camisinha e as pílulas anticoncepcionais. Esta pesquisa tem como objetivo examinar em detalhes esses dois métodos contraceptivos, incluindo seu funcionamento, eficácia e considerações de uso.</p>
                     <p>A camisinha, também conhecida como preservativo, é um método contraceptivo de barreira. Ela atua como uma barreira física impedindo que o esperma entre em contato com o óvulo. As camisinhas masculinas são feitas de látex ou poliuretano, enquanto as femininas são feitas de nitrilo ou poliuretano. É altamente eficaz na prevenção da gravidez quando usada corretamente. A eficácia pode variar, mas as taxas de sucesso são geralmente superiores a 95% quando usadas corretamente em todas as relações sexuais. A eficácia depende em grande parte do uso consistente e adequado.</p>
                     <p>As pílulas anticoncepcionais são medicamentos orais que contêm hormônios, geralmente estrogênio e progestina (pílulas combinadas) ou apenas progestina (pílulas de progestina). Elas funcionam inibindo a ovulação e tornando o muco cervical mais espesso, dificultando a passagem dos espermatozoides. São altamente eficazes na prevenção da gravidez quando tomadas conforme as instruções. A eficácia é de aproximadamente 99% quando tomadas de maneira consistente e no horário correto.</p>
@@ -85,7 +86,7 @@
                     <p>A promoção de relacionamentos saudáveis desempenha um papel fundamental na prevenção da gravidez indesejada entre adolescentes e jovens adultos. Esta pesquisa tem como objetivo explorar a importância dos relacionamentos saudáveis na prevenção de gravidez indesejada, bem como destacar elementos-chave de relacionamentos saudáveis e a comunicação eficaz entre parceiros.</p>
                     <p>A base de um relacionamento saudável é a comunicação aberta e honesta entre parceiros. Conversar sobre desejos, necessidades, limites e planos para o futuro ajuda a tomar decisões conjuntas sobre contracepção. Relacionamentos saudáveis são construídos com base no respeito mútuo. Isso inclui respeitar as decisões do parceiro sobre contracepção e consentimento sexual. Casais que compartilham conhecimento sobre educação sexual estão mais bem preparados para tomar decisões informadas sobre métodos contraceptivos. O apoio emocional e prático entre parceiros é fundamental para a prevenção da gravidez indesejada. Isso envolve apoiar a escolha de contracepção e apoiar-se mutuamente em caso de gravidez.</p>              
                     <p>Relacionamentos saudáveis desempenham um papel crucial na prevenção de gravidez indesejada, pois promovem a comunicação eficaz, o respeito mútuo e a tomada de decisões conscientes sobre contracepção. É fundamental educar jovens sobre como construir relacionamentos saudáveis e garantir que tenham acesso a informações sobre contracepção e serviços de saúde. A promoção de relacionamentos saudáveis contribui significativamente para a prevenção da gravidez indesejada e para o bem-estar emocional e físico de adolescentes e jovens adultos.</p> 
-            <img width="400em" class="wheyimg" src="img/relacionamentos.jpg" alt="">   
+            <img width="400em" class="relaimg" src="img/relacionamentos.jpg" alt="">   
     </section>
 
     <section id="autocuidado">
@@ -94,14 +95,15 @@
                     <p>O autocuidado começa com a educação sobre saúde sexual. Adolescentes e jovens adultos devem buscar informações sobre anatomia, reprodução, métodos contraceptivos e doenças sexualmente transmissíveis (DSTs). Inclui a escolha consciente de métodos contraceptivos adequados às necessidades e preferências pessoais. Isso envolve pesquisa e consulta a profissionais de saúde.</p>
                     <p>O uso consistente de contraceptivos é uma parte fundamental do autocuidado. Isso inclui seguir as instruções de uso de métodos como a pílula anticoncepcional, o DIU ou o preservativo. Manter consultas regulares com um profissional de saúde é uma prática de autocuidado importante. Isso permite a avaliação da saúde sexual, aconselhamento e ajustes nos métodos contraceptivos, se necessário.</p>
                     <p>A comunicação aberta e honesta com parceiros sobre a saúde sexual, a contracepção e os limites pessoais também fazem parte do tópico. A realização de autoteste de gravidez em casa é uma prática de autocuidado que permite o monitoramento da situação de forma privada. O autocuidado envolve o planejamento do futuro, incluindo a educação, a carreira e a família, para garantir que as decisões estejam alinhadas com os objetivos pessoais.</p>  
-            <img width="400em" class="wheyimg" src="img/autocuidado.jpg" alt=""> 
+            <img width="400em" class="relaimg" src="img/autocuidado.jpg" alt=""> 
     </section>
 
 </div>
 
 <footer>
-    <h2>Desenvolvido por Davi, Lucas M., Matheus, Pedro H., e Wesley</h2>
-
+    <h2>Desenvolvido por: Davi; Lucas M; Matheus; Pedro H e Wesley</h2>
+    <h1>GitHub do grupo</h1>
+    <a href="https://github.com/lucasmpseven/MaterialIW"><img class="iconefot" width="120em" height="120em" src="img/github.png" alt="github icone"></a>
 </footer>
 
 </body>
